--- a/TestWebApplication/TestWebApplication/Web.config
+++ b/TestWebApplication/TestWebApplication/Web.config
@@ -10,6 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-TestWebApplication-20150214192212;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-TestWebApplication-20150214192212.mdf" providerName="System.Data.SqlClient" />
+    <add name="MovieDBContext" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\Movies.mdf;Integrated Security=True"
+         providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
