--- a/TestWebApplication/TestWebApplication/Views/Web.config
+++ b/TestWebApplication/TestWebApplication/Views/Web.config
@@ -30,6 +30,8 @@
       <add path="*" verb="*" type="System.Web.HttpNotFoundHandler"/>
     </httpHandlers>
 
+    <globalization culture="pl-PL"/>
+    
     <!--
         Enabling request validation in view pages would cause validation to occur
         after the input has already been processed by the controller. By default
