adds migrations to project with simple seed method

--- a/TestWebApplication/TestWebApplication/TestWebApplication.csproj
+++ b/TestWebApplication/TestWebApplication/TestWebApplication.csproj
@@ -193,6 +193,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201502221829392_Initial.cs" />
+    <Compile Include="Migrations\201502221829392_Initial.Designer.cs">
+      <DependentUpon>201502221829392_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -676,6 +681,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201502221829392_Initial.resx">
+      <DependentUpon>201502221829392_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
