--- a/TestWebApplication/TestWebApplication/Views/Web.config
+++ b/TestWebApplication/TestWebApplication/Views/Web.config
@@ -30,7 +30,7 @@
       <add path="*" verb="*" type="System.Web.HttpNotFoundHandler"/>
     </httpHandlers>
 
-    <globalization culture="pl-PL"/>
+    <globalization culture="pl-PL"/><!-- way to set forcibly culture -->
     
     <!--
         Enabling request validation in view pages would cause validation to occur
